# basquet-catala-reports

./: .gitignore  CLAUDE.md  README.md  fetch_data.py  generate_match_reports.py  process_data.py  pyproject.toml  reports.py  run.py
.claude/: settings.local.json
.github/workflows/: generate-reports.yml  jekyll-gh-pages.yml
docs/: ARCHITECTURE.md  CONTEXT_MANAGEMENT.md  README.md  USAGE.md
report_tools/: advanced_stats.py  data_loaders.py  llm.py  logger.py  models.py  plotting.py  reports.py  stats.py  stats_calculator.py  templates.py  utils.py
report_tools/models/: __init__.py  groups.py  matches.py  players.py  teams.py
tests/: conftest.py  test_advanced_stats.py  test_data_loading.py  test_groups.py  test_match_moves.py  test_match_stats.py  test_player_stats.py  test_stats.py  test_team_stats.py
tests/fixtures/: match_moves.json  match_stats.json  player_stats.json  team_stats.json
tests/models/: test_groups.py  test_match_moves.py  test_match_stats.py  test_nested_models.py  test_player_stats.py  test_team_stats.py
