[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "jinja2>=3.1.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.4",
    "litellm>=1.68.0",
    "markdown2>=2.5.3",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "trafilatura>=2.0.0",
]
